[tool.poetry]
name = "cloudproxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
apscheduler = "3.10.4"
dateparser = "1.1.2"
fastapi = "0.85.1"
loguru = "0.6.0"
python-dotenv = "0.21.0"
uvicorn = "0.19.0"
uvicorn-loguru-integration = "0.3.0"
python-digitalocean = "1.17.0"
boto3 = "1.29.5"
urllib3 = "2.0.7"
aiofiles = "22.1.0"
botocore = "1.32.5"
hcloud = "1.18.1"
google-api-python-client = "2.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
